--- a/src/components/showFood.css
+++ b/src/components/showFood.css
@@ -1,3 +1,9 @@
+.filter{
+    display: inline-flex;
+}
+.filter-item{
+    margin: 20px;
+}
 .show-items{
     display: flex;
     flex-direction: row;
